--- a/man/liftext.1
+++ b/man/liftext.1
@@ -2,7 +2,8 @@
 .SH NAME
 liftext \- a filter to translate an HP LIF text file into an ASCII text file
 .SH SYNOPSIS
-.B liftext <
+.B liftext 
+.B <
 .I Input file
 .B >
 .I Output file
