--- a/man/lifdir.1
+++ b/man/lifdir.1
@@ -83,10 +83,10 @@ of the 2 file type bytes from the directory. See
 for details of the file types.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF disk image file then
 .PP
-.B lifdir  disk1.img
+.B lifdir  disk1.dat
 .PP
 will print a directory listing of that image file.
 .SH REFERENCES
