--- a/man/lifdump.1
+++ b/man/lifdump.1
@@ -36,10 +36,10 @@ and
 write access to the floppy disk device.
 .SH EXAMPLES
 If the file
-.I disk1.img
+.I disk1.dat
 contains a LIF disk image then
 .PP
-.B lifdump disk1.img /dev/fd1
+.B lifdump disk1.dat /dev/fd1
 .PP
 will dump that file to a preformatted disk in device
 .I /dev/fd1
