--- a/man/liffix.1
+++ b/man/liffix.1
@@ -44,13 +44,13 @@ hdrive16: Initializes a medium with the size of a 16 MB disk
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF disk image file with improper medium size information then
 .PP
-.B liffix -m disk disk1.img
+.B liffix -m disk disk1.dat
 .PP
 will fix the medium size information of
-.I disk1.img
+.I disk1.dat
 The header is fixed with the parameters of the HP9114B double sided disk
 medium.
 .PP
