--- a/man/lifinit.1
+++ b/man/lifinit.1
@@ -48,13 +48,13 @@ Initialize the data area of the image with zeros.
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 shall be created as LIF disk image file then
 .PP
-.B lifinit -m disk disk1.lif 160
+.B lifinit -m disk disk1.dat 160
 .PP
 will create the lif image file
-.I disk1.lif
+.I disk1.dat
 with a directory size of 
 .I 160 
 entries. The command creates the disk header and an empty directory. The
