--- a/man/liflabel.1
+++ b/man/liflabel.1
@@ -22,20 +22,20 @@ Clears an existing label
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF image file then
 .PP
-.B liflabel disk1.img TEST1
+.B liflabel disk1.dat TEST1
 .PP
 will set the label of the LIF image file
-.I disk1.img
+.I disk1.dat
 to
 .I TEST1
 .PP
-.B liflabel -c disk1.img
+.B liflabel -c disk1.dat
 .PP
 will clear an existing label on the LIF image file 
-.I disk1.img
+.I disk1.dat
 .SH REFERENCES
 The LIF disk format is documented in the
 .I HP\-IL Interface Owners Manual for the HP\-71 (Hewlett\-Packard)
