--- a/man/lifpack.1
+++ b/man/lifpack.1
@@ -15,13 +15,13 @@ packs the directory and the file area on a LIF image file. After packing all unu
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF disk image file then
 .PP
-.B lifpack  disk1.img
+.B lifpack  disk1.dat
 .PP
 will pack the lif image file
-.I disk1.img.
+.I disk1.dat.
 .B
 Note:
 the packed LIF image file will be truncated to the
