--- a/man/lifpurge.1
+++ b/man/lifpurge.1
@@ -19,12 +19,12 @@ is case\-sensitive and must be given in upper case.
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF image file containing a file called 
 .I TEST1
 then 
 .PP
-.B lifpurge disk1.img TEST1 
+.B lifpurge disk1.dat TEST1 
 .PP
 will purge the file TEST1 from the LIF image file.
 .SH REFERENCES
