--- a/man/lifput.1
+++ b/man/lifput.1
@@ -46,14 +46,14 @@ There is a sufficient number of contiguous blocks in the file area available to 
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF image file and 
 .I test1.p41
 is a HP41 LIF program file, then 
 .PP
-.B lifput disk1.img test1.p41
+.B lifput disk1.dat test1.p41
 .PP
-will copy the  HP41 LIF program file test1.p41 to the LIF image file disk1.img.
+will copy the  HP41 LIF program file test1.p41 to the LIF image file disk1.dat.
 .PP
 .SH REFERENCES
 The LIF disk directory format is documented in the
