--- a/man/lifrename.1
+++ b/man/lifrename.1
@@ -35,16 +35,16 @@ otherwise.
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If 
-.I disk1.img
+.I disk1.dat
 is a LIF image file containing a file called 
 .I TEST1
 then 
 .PP
-.B lifrename disk1.img TEST1 TEST2
+.B lifrename disk1.dat TEST1 TEST2
 .PP
 will rename the file 
 .I TEST1 
-on the LIF disk image disk1.img to 
+on the LIF disk image disk1.dat to 
 .I TEST2.
 .SH REFERENCES
 The LIF disk directory format is documented in the
