--- a/man/lifstat.1
+++ b/man/lifstat.1
@@ -48,15 +48,15 @@ as appropriate.
 Print a message giving program usage to standard error and exit.
 .SH EXAMPLES
 If
-.I disk.img
+.I disk.dat
 is a LIF image file, then
 .PP
-.B lifstat  disk.img
+.B lifstat  disk.dat
 .PP
 will write a message to standard output giving the start and end blocks of
 the directory and user data. Similarly
 .PP
-.B lifstat  disk.img 37
+.B lifstat  disk.dat 37
 .PP
 will output the file name of the file containing block 37
 .SH REFERENCES
