--- a/man/regs41.1
+++ b/man/regs41.1
@@ -28,12 +28,12 @@ contains a considerable amount of information as to how the HP41 packs
 data into registers
 .SH EXAMPLES
 If 
-.I disk1.lif
+.I disk1.dat
 is a LIF disk image containing some unknown type of HP41 data file called
 .I ST41
 then
 .PP
-.B lifget \-r disk1.lif ST41 | regs41
+.B lifget \-r disk1.dat ST41 | regs41
 .PP 
 will display the data in that file as HP41 registers and will hopefully 
 assist in understanding the format of the file
