--- a/man/rom41er.1
+++ b/man/rom41er.1
@@ -26,12 +26,12 @@ If
 .I HPILDv1B.ROM 
 is the rom file of the HP-IL development module then
 .PP
-.B cat HPILDv1B.ROM | rom41er HPILDEV | lifput lifimage.img
+.B cat HPILDv1B.ROM | rom41er HPILDEV | lifput lifimage.dat
 .PP 
 will put the scrambled rom file with the name
 .I HPILDEV
 into the LIF image file
-.I lifimage.img
+.I lifimage.dat
 .SH AUTHOR
 .B rom41er
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
