--- a/man/rom41lif.1
+++ b/man/rom41lif.1
@@ -21,12 +21,12 @@ If
 .I HPILDv1B.ROM 
 is the rom file of the HP-IL development module then
 .PP
-.B cat HPILDv1B.ROM | rom41lif HPILDEV | lifput lifimage.img
+.B cat HPILDv1B.ROM | rom41lif HPILDEV | lifput lifimage.dat
 .PP
 will put the sdata rom file with the name
 .I HPILDEV
 into the LIF image file
-.I lifimage.img
+.I lifimage.dat
 .SH AUTHOR
 .B rom41lif
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
