--- a/man/sdata.1
+++ b/man/sdata.1
@@ -65,10 +65,10 @@ in the
 (Addresses given are for the 1BBBB version of the ROM).
 .SH EXAMPLES
 If
-.I disk1.img
+.I disk1.dat
 is a LIF disk image containing an sdata file called DATA1 then
 .PP
-.B lifget \-r disk1.img DATA1 | sdata \-n 
+.B lifget \-r disk1.dat DATA1 | sdata \-n 
 .PP
 will produce a register\-numbered listing of the data in that file to 
 standard output
