--- a/man/stat41.1
+++ b/man/stat41.1
@@ -30,12 +30,12 @@ Display user flags verbosely, rather than as a binary number.
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
 If
-.I disk1.img
+.I disk1.dat
 is a LIF image file containing an HP41 status file called
 .I STAT
 then
 .PP
-.B lifget \-r disk1.lif STAT | stat41
+.B lifget \-r disk1.dat STAT | stat41
 .PP
 will display the contents of this status file on standard output
 .SH AUTHOR
