--- a/man/text75.1
+++ b/man/text75.1
@@ -25,12 +25,12 @@ Print a decimal line number at the start of each output line.
 Print a message giving usage to standard error.
 .SH EXAMPLES
 If
-.I disk1.img
+.I disk1.dat
 is a LIF image file containing an HP75 text file called 
 .I T75
 then
 .PP
-.B lifget \-r disk1.img T75 | text75
+.B lifget \-r disk1.dat T75 | text75
 .PP 
 will list that file to standard output.
 .SH AUTHOR
