--- a/man/textlif.1
+++ b/man/textlif.1
@@ -40,12 +40,12 @@ If
 is an ASCII text file 
 then
 .PP
-.B cat demo.txt | textlif DEMO | lifput lifimage.img
+.B cat demo.txt | textlif DEMO | lifput lifimage.dat
 .PP
 will put the LIF text file with the name
 .I DEMO
 into the LIF image file
-.I lifimage.img
+.I lifimage.dat
 .SH AUTHOR
 .B textlif
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
