--- a/man/lifimage.1
+++ b/man/lifimage.1
@@ -35,10 +35,10 @@ If device
 .I /dev/fd1
 contains an HP LIF disk then
 .PP
-.B lifimage /dev/fd1 disk1.img
+.B lifimage /dev/fd1 disk1.dat
 .PP
 will make an image of that disk in the file 
-.I disk1.img
+.I disk1.dat
 .SH AUTHOR
 .B lifimage
 was written by Tony Duell, ard@p850ug1.demon.co.uk and has been placed 
