--- a/man/key41.1
+++ b/man/key41.1
@@ -13,7 +13,8 @@ key41 \- a filter to list an HP-41 key assignment file
 .B >
 .I Output file
 .PP
-.B key41 \-?
+.B key41 
+\-?
 .SH DESCRIPTION
 .B key41
 is a filter which produces a listing of an HP-41 key assignment file. The
