--- a/man/lifrename.1
+++ b/man/lifrename.1
@@ -1,8 +1,10 @@
-.TH lifrename 1 14-April-2018 "LIF Utilities" "LIF Utilities"
+.TH lifrename 1 16-March-2019 "LIF Utilities" "LIF Utilities"
 .SH NAME
 lifrename \- renames a file on a LIF image file
 .SH SYNOPSIS
 .B lifrename 
+[\-l]
+[\-p]
 .I <LIF image file> <old filename> <new filename>
 .PP
 .B lifrename \-?
@@ -30,6 +32,12 @@ file name conventions. Thus this command may be used to rename files that can no
 LIFUTILS
 otherwise.
 .SH OPTIONS
+.TP
+.I \-l
+Relax file name checking, allow underscores in new file name.
+.TP
+.I \-p
+Rename a file on a floppy disk with a LIF file system. Note: this option is only supported on LINUX. Specify the floppy device instead of the lif-image-filename. See the LIFUTILS tutorial for details.
 .TP
 .I \-?
 Print a message giving the program usage to standard error.
