--- a/man/lifput.1
+++ b/man/lifput.1
@@ -1,11 +1,15 @@
-.TH lifput 1 14-April-2018 "LIF Utilities" "LIF Utilities"
+.TH lifput 1 15-March-2019 "LIF Utilities" "LIF Utilities"
 .SH NAME
 lifput \- put a LIF file into a LIF image file
 .SH SYNOPSIS
 .B lifput 
+[\-l]
+[\-p]
 .I <LIF image file> <LIF file> 
 .PP
 .B lifput 
+[\-l]
+[\-p]
 .I <LIF image file>
 .PP
 (last form gets the LIF file from standard input)
@@ -41,7 +45,13 @@ There is at least one free entry in the directory area.
 There is a sufficient number of contiguous blocks in the file area available to store the file.
 
 .SH OPTIONS
+.TP
+.I \-l
+Relax file name checking, allow underscores in filenames.
 .TP 
+.I \-p
+Write file to a floppy disk with a LIF file system. Note: this option is only supported on LINUX. Specify the floppy device instead of the lif-image-filename. See the LIFUTILS tutorial for details.
+.TP
 .I \-?
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
