--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ lifutils (1.7.9-devel) bionic; urgency=medium
   * added -l option to relax file name checking, allow underscore in
     lif filenames 
   * documented the "-p" option for floppy disk access (LINUX only)
+  * Windows installer updates
 
  -- trusty <achim@trillian.trilldom.lan>  Sat, 16 Mar 2019 14:58:17 +0100
 
