--- a/man/liftext75.1
+++ b/man/liftext75.1
@@ -1,17 +1,17 @@
-.TH text75 1 14-April-2018 "LIF Utilities" "LIF Utilities"
+.TH liftext75 1 14-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME 
-text75 \- a filter to print raw HP75 text files
+liftext75 \- a filter to print raw HP75 text files
 .SH SYNOPSIS
-.B text75
+.B liftext75
 [\-n]
 .B <
 .I Input file
 .B >
 .I Output file
 .PP
-.B text75 \-?
+.B liftext75 \-?
 .SH DESCRIPTION
-.B text75
+.B liftext75
 is a filter which translates a raw HP75 text file into a standard ASCII file.
 One logical line of the input file is translated to one line of output,
 terminated by a newline.  The HP75 text file is read from standard input
@@ -30,10 +30,10 @@ is a LIF image file containing an HP75 text file called
 .I T75
 then
 .PP
-.B lifget \-r disk1.dat T75 | text75
+.B lifget \-r disk1.dat T75 | liftext75
 .PP 
 will list that file to standard output.
 .SH AUTHOR
-.B text75
+.B liftext75
 was written by Tony Duell, ard@p850ug1.demon.co.uk and has been placed 
 under the GNU Public License version 2.0
