--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ lifutils (1.7.9-devel) bionic; urgency=medium
   * Windows installer updates 
   * renamed text75 to liftext75
   * added textlif75
+  * added lexcat75
 
  -- trusty <achim@trillian.trilldom.lan>  Sat, 16 Mar 2019 14:58:17 +0100
 
