lexcat75 output now similar to the output of the HP-75 HELP lex file, prepare relase 1.7.10

--- a/man/lexcat75.1
+++ b/man/lexcat75.1
@@ -16,7 +16,7 @@ is a filter which reads a HP-75 raw lex file from standard input and displays th
 .IP \- 3
 LEX file id
 .IP \- 3
-list of keywords with their attribute
+list of keywords with their attributes and parameter types
 .IP \- 3
 code attributes
 .PP
