--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lifutils (1.7.10) bionic; urgency=medium
+
+  * lexcat75: the output of the program is now similar to the output of
+    the HP-75 HELP lex file. 
+
+ -- trusty <achim@trillian>  Mon, 03 Feb 2020 09:17:52 +0100
+
 lifutils (1.7.9) bionic; urgency=medium
 
   * merged pull #3: make LIFUTILS build on non LINUX Unices, 
