--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ lifutils (1.7.10) bionic; urgency=medium
 
   * lexcat75: the output of the program is now similar to the output of
     the HP-75 HELP lex file. 
+  * lexcat71: The program does not show invalidated text table entries any more
 
  -- trusty <achim@trillian>  Mon, 03 Feb 2020 09:17:52 +0100
 
