--- a/man/decomp41.1
+++ b/man/decomp41.1
@@ -60,8 +60,8 @@ immediately preceding the display of that instruction
 Enable line numbers
 .TP
 .I \-a
-Decompile the following non ASCII HP-41 FOCAL character set as Unicode characters: ├ (hex 0x7f), μ (hex 0x0c),
-⊀ (hex 0x0d), ≠ (hex 0x1d), Σ (hex 0x7e)
+Decompile the following non ASCII HP-41 FOCAL character set as Unicode characters: text append (hex 0x251c),
+greek small mu (hex 0x03bc), angle (hex 0x2280), not equal to (hex 0x2260), greep capital sigma (hex 0x03A3).
 .TP
 .I \-x xrom_file
 Use
