--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 lifutils (1.7.12) bookworm; urgency=medium
 
   * various fixes to comp41, decomp41, rom41cat for a better handling of Unicode characters
+  * added -l option to decomp41 to add line numbers
+  * added -a option to decomp41 to use unicode special characters
 
  -- bookworm <achim@trillian>  Mon, 22 Apr 2024 07:58:13 +0200
 
