--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
 lifutils (1.7.12) bookworm; urgency=medium
 
-  * various fixes to comp41, decomp41, rom41cat for a better handling of Unicode characters
-  * added -l option to decomp41 to add line numbers
-  * added -a option to decomp41 to use unicode special characters
+  * comp41, decomp41, rom41cat can now handle the following Unicode characters: 
+    text append (hex 0x251c), greek small mu (hex 0x03bc), angle (hex 0x2280), 
+    not equal to (hex 0x2260), greek capital sigma (hex 0x03A3).
+  * the xrom file format was extended to allow alternative instruction names 
+    with unicode characters
+  * decomp41 now optinally adds line numbers to decompiled instructions
+  * comp41 can now write a source and bytecode listing on standard error
+  * comp41 now optionally creates a LIF file instead of a raw file
+  * the xrom files for HP41 peripherals are now combined in the single xrom file hpdevices.xrom
+  * xrom files were added for several HP application modules
 
- -- bookworm <achim@trillian>  Mon, 22 Apr 2024 07:58:13 +0200
+ -- bookworm <achim@trillian>  Sun, 06 Oct 2024 21:28:00 +0200
 
 lifutils (1.7.11) bookworm; urgency=medium
 
