reverted to hex 2280 for angle because rpncomp uses it too, add missing END in decomp41

--- a/man/comp41.1
+++ b/man/comp41.1
@@ -49,7 +49,7 @@ Append text is allowed using:  '>"text"' , ' "|-text" ', or '"\\-text"'.
 Double quote in text must be escaped by  '\\' (incompatibility to hp41uc).
 .PP
 The following Unicode characters are translated to the HP-41 FOCAL character set: text append (hex 0x251c), 
-greek small mu (hex 0x03bc), measured angle (hex 0x2221), not equal to (hex 0x2260), greek capital sigma (hex 0x03A3).
+greek small mu (hex 0x03bc), angle (hex 0x2280), not equal to (hex 0x2260), greek capital sigma (hex 0x03A3).
 and may be used in text and instructions.
 .PP
 Synthetic instructions are allowed: 'rcl M', 'sto R'
