--- a/man/decomp41.1
+++ b/man/decomp41.1
@@ -61,7 +61,7 @@ Enable line numbers
 .TP
 .I \-a
 Decompile the following non ASCII HP-41 FOCAL characters as Unicode characters: text append (hex 0x251c),
-greek small mu (hex 0x03bc), measured angle (hex 0x2221), not equal to (hex 0x2260), greek capital sigma (hex 0x03A3).
+greek small mu (hex 0x03bc), angle (hex 0x2280), not equal to (hex 0x2260), greek capital sigma (hex 0x03A3).
 .TP
 .I \-x xrom_file
 Use
