--- a/man/rom41cat.1
+++ b/man/rom41cat.1
@@ -51,7 +51,7 @@ xrom definition file
 .TP
 .I \-a
 Decompile the following non ASCII HP-41 FOCAL characters as Unicode characters: text append (hex 0x251c),
-greek small mu (hex 0x03bc), measured angle (hex 0x2221), not equal to (hex 0x2260), greek capital 
+greek small mu (hex 0x03bc), angle (hex 0x2280), not equal to (hex 0x2260), greek capital 
 sigma (hex 0x03A3).  In a xrom file function names containing these FOCAL characters are output as two 
 text strings. The first string contains these characters as escaped hex codes, the second as Unicode characters. 
 Note: xrom files created with this option are compatible with
