--- a/man/comp41.1
+++ b/man/comp41.1
@@ -46,7 +46,7 @@ Postfixes are case-sensitive:  'lbl a'  different than 'lbl A'.
 .PP
 Append text is allowed using:  '>"text"' , ' "|-text" ', or '"\\-text"'.
 .PP
-Double quote in text must be escaped by  '\\' (incompatibility to hp41uc).
+Text must be either encosed in '"' or "'". If the text contains an enclosing character, it must be escaped with  '\\'.
 .PP
 The following Unicode characters are translated to the HP-41 FOCAL character set: text append (hex 0x251c), 
 greek small mu (hex 0x03bc), angle (hex 0x2280), not equal to (hex 0x2260), greek capital sigma (hex 0x03A3).
